--- a/quantum-dsl.cabal
+++ b/quantum-dsl.cabal
@@ -1,12 +1,12 @@
 cabal-version: 2.2
-build-type: Custom
 
 name: quantum-dsl
 version: 0.0.0.0
 
 common depends
-  build-depends: base, quipper-utils, quipper-language, quipper-libraries, quipper-algorithms
+  build-depends: base, template-haskell, quipper-utils, quipper-language, quipper-libraries, quipper-algorithms
   default-language: Haskell2010
+  default-extensions: TemplateHaskell
 
 common example
   import: depends
@@ -25,9 +25,10 @@ executable DeutschJozsa
   import: example
   main-is: DeutschJozsa.hs
 
+executable Shor
+  import: example
+  main-is: Shor.hs
+
 executable Simon
   import: example
   main-is: Simon.hs
-
-custom-setup
-  setup-depends: base, Cabal, quipper-cabal
