--- a/qgat.cabal
+++ b/qgat.cabal
@@ -3,6 +3,12 @@ cabal-version: 2.2
 name: qgat
 version: 0.0.0.0
 
+author: Ulrik de Muelenaere
+maintainer: ulrikdem@gmail.com
+copyright: (c) 2024 Ulrik de Muelenaere
+license: BSD-3-Clause
+license-file: LICENSE
+
 common depends
   build-depends: base, template-haskell, quipper-utils, quipper-language, quipper-libraries, quipper-algorithms
   default-language: Haskell2010
